--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 
 
 * {
-  font-family:  BlinkMacSystemFont,"BrutaProRegular", "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
+  font-family:  BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   color: #f4e5e0;
   box-sizing: border-box;
